tests/fail/parser-escape3.dit
A {
    String value;
}

A a;

a.value = 'this;